--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.rodion.urbanlab.LoginActivity">
 
     <RelativeLayout
@@ -54,5 +55,13 @@
             android:background="@null"
             android:layout_marginTop="300dp"
             android:textColor="@android:color/holo_red_dark" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
