aded com.example.rodion.urbanlab.FacebookFragment in fragment fb <-activity_fb_fragment, and fixed designe buttons on content menu

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.rodion.urbanlab.LoginActivity">
 
     <RelativeLayout
@@ -56,11 +55,12 @@
             android:layout_marginTop="300dp"
             android:textColor="@android:color/holo_red_dark" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="350dp" />
 
 
     </RelativeLayout>
