--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="300dp">
+            android:layout_marginTop="260dp">
 
             <EditText
                 android:id="@+id/signup_input_password"
@@ -42,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/hint_password"
+                android:layout_marginTop="260dp"
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
@@ -80,9 +81,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="250dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:paddingTop="100dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="00dp">
 
         <TextView
             android:id="@+id/gender_textview"
@@ -90,16 +92,18 @@
             android:layout_height="wrap_content"
             android:fontFamily="@string/hint_password"
             android:fontFeatureSettings="@string/hint_password"
-            android:paddingRight="15dp"
+            android:paddingRight="14dp"
             android:text="@string/hint_gender"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:layout_marginTop="240dp"/>
 
         <RadioGroup
             android:id="@+id/gender_radio_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/gender_textview"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="240dp">
 
             <RadioButton
                 android:id="@+id/male_radio_btn"
@@ -118,7 +122,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="100dp">
+            android:layout_marginTop="250dp">
 
             <Button
                 android:id="@+id/btn_signup"
@@ -137,6 +141,10 @@
                 android:background="@null"
                 android:text="@string/btn_link_login"
                 android:textColor="@android:color/black" />
+
+
+
+
         </RelativeLayout>
     </RelativeLayout>
 
