--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,41 +21,41 @@
 
         <Button
             android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/btncamera"
             android:layout_alignBottom="@+id/btncamera"
-            android:layout_toEndOf="@+id/btncamera"
+            android:layout_alignParentEnd="true"
             android:text="@string/btnBack" />
 
         <Button
             android:id="@+id/btncamera"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/btnmap"
+            android:layout_above="@+id/btnLogin"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="11dp"
+            android:layout_marginBottom="150dp"
             android:text="@string/btncamera" />
 
         <Button
             android:id="@+id/btnmap"
-            android:layout_width="150dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/btnLogin"
-            android:layout_alignBottom="@+id/btnLogin"
-            android:layout_alignParentEnd="true"
+            android:layout_alignBaseline="@+id/btnBack"
+            android:layout_alignBottom="@+id/btnBack"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="bottom"
-            android:layout_marginEnd="68dp"
             android:text="Map"
             tools:layout_editor_absoluteX="133dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
+            android:layout_toEndOf="@+id/btncamera"
             android:text="@string/btnLogin" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
